# DiscordBot1

./: README.md  dockerfile  main.py  pyproject.toml  requirments.txt
