[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "ffmpeg==1.4",
    "load-dotenv>=0.1.0",
    "opuslib==3.0.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "yt-dlp>=2025.1.26",
]
